validation bug fix